chore: Update local dev build script to use dynamic selection of local compose files for building

--- a/docker-compose.proxy.yml
+++ b/docker-compose.proxy.yml
@@ -45,7 +45,7 @@ services:
       - PG_PASSWORD=${PG_PASSWORD:-changeme}
       - PG_PORT=${PG_PORT:-5432}
       
-      # Database Connection (Laravel)
+      # Database Connection (m3u-editor)
       - DB_CONNECTION=pgsql
       - DB_HOST=localhost
       - DB_PORT=${PG_PORT:-5432}
