chore: Flip logic for embedded vs. external proxy setup
Line up the `_ENABLED`, e.g. `M3U_PROXY_ENABLED`, to be true for embedded services, or false to disable embedded. Proxy logic was flipped from others, change it to line up with the other variables.

--- a/.env.example
+++ b/.env.example
@@ -68,9 +68,9 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 
 # M3U Proxy Configuration (Python-based streaming proxy)
-# M3U_PROXY_ENABLED=false means use EMBEDDED proxy (default, runs in container)
-# M3U_PROXY_ENABLED=true means use EXTERNAL proxy service (separate container)
-# M3U_PROXY_ENABLED=false             # false/unset = embedded, true = external service
+# M3U_PROXY_ENABLED=true means use EMBEDDED proxy (default, runs in container)
+# M3U_PROXY_ENABLED=false means use EXTERNAL proxy service (separate container)
+# M3U_PROXY_ENABLED=true              # true = embedded, false/null = external service
 # M3U_PROXY_HOST=127.0.0.1            # Host for embedded proxy (localhost)
 # M3U_PROXY_PORT=8085                 # Port for embedded proxy (internal)
 
