--- a/docker/8.4/supervisord.conf
+++ b/docker/8.4/supervisord.conf
@@ -10,13 +10,13 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisord]
 nodaemon=true
-user=root
+user=%(ENV_SUPERVISOR_PHP_USER)s
 logfile=/var/log/supervisor/supervisord.log
 pidfile=/var/run/supervisord.pid
 
 [program:crond]
 command=/usr/sbin/crond -f -d 8
-user=root
+user=%(ENV_SUPERVISOR_PHP_USER)s
 autostart=true
 autorestart=true
 stdout_logfile=/var/log/cron.out.log
@@ -29,7 +29,7 @@ priority=1
 [program:nginx]
 command=/usr/sbin/nginx -g 'daemon off;'
 user=%(ENV_SUPERVISOR_PHP_USER)s
-autostart=true
+autostart=%(ENV_NGINX_ENABLED)s
 autorestart=true
 redirect_stderr=true
 stdout_logfile=/var/www/html/storage/logs/nginx.log
@@ -78,7 +78,7 @@ priority=5
 ;-----------------------------------------
 [program:m3u-proxy]
 command=/opt/m3u-proxy/.venv/bin/python /opt/m3u-proxy/main.py
-user=root
+user=%(ENV_SUPERVISOR_PHP_USER)s
 autostart=%(ENV_M3U_PROXY_START_EMBEDDED)s
 autorestart=true
 redirect_stderr=true
@@ -91,7 +91,7 @@ environment=HOST="%(ENV_M3U_PROXY_HOST)s",PORT="%(ENV_M3U_PROXY_PORT)s",LOG_LEVE
 ;-----------------------------------------
 [program:redis]
 command=redis-server /etc/redis/redis.conf
-user=root
+user=%(ENV_SUPERVISOR_PHP_USER)s
 autostart=%(ENV_REDIS_ENABLED)s
 autorestart=true
 redirect_stderr=true
