--- a/docker-compose.proxy.yml
+++ b/docker-compose.proxy.yml
@@ -59,9 +59,9 @@ services:
       - REDIS_HOST=${REDIS_HOST:-redis}
       
       # M3U Proxy Configuration (External)
-      - M3U_PROXY_ENABLED=true # Enable external m3u-proxy
+      - M3U_PROXY_ENABLED=false # Enable external m3u-proxy
       - M3U_PROXY_PORT=${M3U_PROXY_PORT:-38085}
-      - M3U_PROXY_HOST=${PROXY_HOST:-m3u-proxy} # Internal network hostname of m3u-proxy container
+      - M3U_PROXY_HOST=${M3U_PROXY_HOST:-m3u-proxy} # Internal network hostname of m3u-proxy container
       # Public URL for m3u-proxy (used for rewriting stream URLs)
       - M3U_PROXY_PUBLIC_URL=${M3U_PROXY_PUBLIC_URL:-http://localhost:36400/m3u-proxy}
       - M3U_PROXY_TOKEN=${M3U_PROXY_TOKEN:-changeme}
