chore: Disable JIT (remove runtime warnings) and enable Opcache (performance)
Remove JIT to disable the runtime errors, and add OPcache settings to enable

--- a/docker/8.4/php.ini
+++ b/docker/8.4/php.ini
@@ -5,7 +5,14 @@ max_execution_time = 1800
 max_input_time = 900
 memory_limit = 2048M
 variables_order = EGPCS
-opcache.jit=1235
-opcache.jit_buffer_size=64M
-# output_buffering = Off
-# implicit_flush = On
+
+opcache.enable=1
+opcache.memory_consumption=256
+opcache.interned_strings_buffer=64
+opcache.max_accelerated_files=32531
+opcache.validate_timestamps=0
+opcache.save_comments=1
+opcache.fast_shutdown=0
+
+opcache.jit=disable
+opcache.jit_buffer_size=0
