--- a/.env.example
+++ b/.env.example
@@ -74,7 +74,7 @@ VITE_APP_NAME="${APP_NAME}"
 # M3U_PROXY_HOST=127.0.0.1            # Host for embedded proxy (localhost)
 # M3U_PROXY_PORT=8085                 # Port for embedded proxy (internal)
 
-# M3U_PROXY_URL is auto-set:
+# M3U_PROXY_PUBLIC_URL is auto-set:
 #   - Embedded: ${APP_URL}/m3u-proxy (via nginx reverse proxy)
 #   - External: Set this to your external service URL
-# M3U_PROXY_URL=http://m3u-proxy:8085
+# M3U_PROXY_PUBLIC_URL=http://localhost/m3u-proxy
