--- a/docker-compose.proxy-vpn.yml
+++ b/docker-compose.proxy-vpn.yml
@@ -108,7 +108,6 @@ services:
     build:
       context: ../m3u-proxy
       dockerfile: Dockerfile
-      target: runtime
       args:
         GIT_BRANCH: ${GIT_BRANCH:-local}
         GIT_COMMIT: ${GIT_COMMIT:-local}
@@ -202,6 +201,13 @@ services:
       # VPN Configuration - CHOOSE YOUR PROVIDER
       # See https://github.com/qdm12/gluetun-wiki for all provider options
       # ...
+      - VPN_SERVICE_PROVIDER=${VPN_SERVICE_PROVIDER}
+      - VPN_TYPE=wireguard
+      - WIREGUARD_PRIVATE_KEY=${WIREGUARD_PRIVATE_KEY}
+      # - WIREGUARD_ADDRESSES=${WIREGUARD_ADDRESSES}
+      # - SERVER_COUNTRIES=${SERVER_COUNTRIES}
+      # - SERVER_HOSTNAMES=${SERVER_HOSTNAMES}
+      # - FIREWALL_OUTBOUND_SUBNETS=${FIREWALL_OUTBOUND_SUBNETS}
     restart: unless-stopped
 
 volumes:
