chore: Update log output to console for all embedded services
Move all log output to `/dev/stdout` and `/dev/stderr` for output logging directly to Docker console/logs

--- a/docker/8.4/supervisord.conf
+++ b/docker/8.4/supervisord.conf
@@ -32,7 +32,10 @@ user=%(ENV_SUPERVISOR_PHP_USER)s
 autostart=%(ENV_NGINX_ENABLED)s
 autorestart=true
 redirect_stderr=true
-stdout_logfile=/var/www/html/storage/logs/nginx.log
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
 priority=2
 
 ;-----------------------------------------
@@ -44,7 +47,10 @@ user=%(ENV_SUPERVISOR_PHP_USER)s
 autostart=%(ENV_REDIS_ENABLED)s
 autorestart=true
 redirect_stderr=true
-stdout_logfile=/var/www/html/storage/logs/redis.log
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
 priority=3
 
 ;-----------------------------------------
@@ -68,7 +74,10 @@ user=%(ENV_SUPERVISOR_PHP_USER)s
 autostart=true
 autorestart=true
 redirect_stderr=true
-stdout_logfile=/var/www/html/storage/logs/websocket.log
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
 priority=5
 
 ;-----------------------------------------
@@ -80,7 +89,10 @@ user=%(ENV_SUPERVISOR_PHP_USER)s
 autostart=true
 autorestart=true
 redirect_stderr=false
-stdout_logfile=/var/www/html/storage/logs/queue.log
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
 stopwaitsecs=3600
 priority=6
 
@@ -94,6 +106,9 @@ user=%(ENV_SUPERVISOR_PHP_USER)s
 autostart=%(ENV_M3U_PROXY_START_EMBEDDED)s
 autorestart=true
 redirect_stderr=true
-stdout_logfile=/var/www/html/storage/logs/m3u-proxy.log
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
 priority=7
 environment=HOST="%(ENV_M3U_PROXY_HOST)s",PORT="%(ENV_M3U_PROXY_PORT)s",LOG_LEVEL="%(ENV_M3U_PROXY_LOG_LEVEL)s",API_TOKEN="%(ENV_M3U_PROXY_TOKEN)s",PUBLIC_URL="%(ENV_M3U_PROXY_PUBLIC_URL)s",REDIS_HOST="%(ENV_M3U_PROXY_REDIS_HOST)s",REDIS_PORT="%(ENV_M3U_PROXY_REDIS_PORT)s",REDIS_DB="%(ENV_M3U_PROXY_REDIS_DB)s",REDIS_ENABLED="%(ENV_M3U_REDIS_ENABLED)s",ENABLE_TRANSCODING_POOLING="%(ENV_M3U_ENABLE_TRANSCODING_POOLING)s"
