feat: make Docker Hub owner dynamic in workflow files
- Replace hardcoded 'sparkison' username with DOCKERHUB_USERNAME secret
- Apply changes to all three workflow files: dev, experimental, and master
- Users who fork the repository no longer need to manually update owner names
- Only requires setting DOCKERHUB_USERNAME secret in repository settings

--- a/.github/workflows/publish_dev.yml
+++ b/.github/workflows/publish_dev.yml
@@ -19,14 +19,14 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
+
       - name: Build and push amd64
         uses: docker/build-push-action@v5
         with:
           context: .
           platforms: linux/amd64
           push: true
-          tags: sparkison/m3u-editor:dev-amd64
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/m3u-editor:dev-amd64
           build-args: |
             GIT_BRANCH=${{ github.ref_name }}
             GIT_COMMIT=${{ github.sha }}
@@ -49,14 +49,14 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
+
       - name: Build and push arm64
         uses: docker/build-push-action@v5
         with:
           context: .
           platforms: linux/arm64
           push: true
-          tags: sparkison/m3u-editor:dev-arm64
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/m3u-editor:dev-arm64
           build-args: |
             GIT_BRANCH=${{ github.ref_name }}
             GIT_COMMIT=${{ github.sha }}
@@ -86,9 +86,9 @@ jobs:
 
       - name: Create manifest list
         run: |
-          docker manifest create sparkison/m3u-editor:dev \
-            sparkison/m3u-editor:dev-amd64 \
-            sparkison/m3u-editor:dev-arm64
-      
+          docker manifest create ${{ secrets.DOCKERHUB_USERNAME }}/m3u-editor:dev \
+            ${{ secrets.DOCKERHUB_USERNAME }}/m3u-editor:dev-amd64 \
+            ${{ secrets.DOCKERHUB_USERNAME }}/m3u-editor:dev-arm64
+
       - name: Push manifest list
-        run: docker manifest push sparkison/m3u-editor:dev
+        run: docker manifest push ${{ secrets.DOCKERHUB_USERNAME }}/m3u-editor:dev
