--- a/.github/workflows/publish_experimental.yml
+++ b/.github/workflows/publish_experimental.yml
@@ -19,14 +19,14 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
+
       - name: Build and push amd64
         uses: docker/build-push-action@v5
         with:
           context: .
           platforms: linux/amd64
           push: true
-          tags: sparkison/m3u-editor:experimental-amd64
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/m3u-editor:experimental-amd64
           build-args: |
             GIT_BRANCH=${{ github.ref_name }}
             GIT_COMMIT=${{ github.sha }}
@@ -49,14 +49,14 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
+
       - name: Build and push arm64
         uses: docker/build-push-action@v5
         with:
           context: .
           platforms: linux/arm64
           push: true
-          tags: sparkison/m3u-editor:experimental-arm64
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/m3u-editor:experimental-arm64
           build-args: |
             GIT_BRANCH=${{ github.ref_name }}
             GIT_COMMIT=${{ github.sha }}
@@ -86,9 +86,9 @@ jobs:
 
       - name: Create manifest list
         run: |
-          docker manifest create sparkison/m3u-editor:experimental \
-            sparkison/m3u-editor:experimental-amd64 \
-            sparkison/m3u-editor:experimental-arm64
-      
+          docker manifest create ${{ secrets.DOCKERHUB_USERNAME }}/m3u-editor:experimental \
+            ${{ secrets.DOCKERHUB_USERNAME }}/m3u-editor:experimental-amd64 \
+            ${{ secrets.DOCKERHUB_USERNAME }}/m3u-editor:experimental-arm64
+
       - name: Push manifest list
-        run: docker manifest push sparkison/m3u-editor:experimental
+        run: docker manifest push ${{ secrets.DOCKERHUB_USERNAME }}/m3u-editor:experimental
