--- a/docker/8.4/nginx/laravel.conf
+++ b/docker/8.4/nginx/laravel.conf
@@ -56,13 +56,15 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
         proxy_cache_bypass $http_upgrade;
-        
+
         # Timeouts for streaming
         proxy_read_timeout 3600s;
         proxy_connect_timeout 75s;
         proxy_send_timeout 3600s;
-        
+
         # Buffering settings for streaming
         proxy_buffering off;
         proxy_request_buffering off;
