fix: make m3u-proxy repository configurable and fix validation error
Critical Fixes:
1. Fix configuration validation parsing error causing false warnings
2. Make m3u-proxy repository/branch configurable via build args
3. Auto-use fork owner's m3u-proxy in CI/CD

Issue #1: Configuration Validation Error
- Fixed 'Laravel config: }' parsing error in start-container
- Changed from 'config:show' to 'tinker' for reliable output
- Added null check to prevent false positives
- Validation now works correctly

Issue #2: m3u-proxy Fork Not Used in AIO Build
- Added M3U_PROXY_REPO and M3U_PROXY_BRANCH build arguments
- Default: sparkison/m3u-proxy (main) - unchanged for upstream
- Override: --build-arg M3U_PROXY_REPO=https://github.com/hektyc/m3u-proxy.git
- GitHub Actions automatically uses repository owner's fork

Changes:
- Dockerfile: Added ARG declarations and dynamic git clone
- .github/workflows/publish_dev.yml: Auto-use fork owner's m3u-proxy:dev
- start-container: Fixed config validation parsing
- DOCKERFILE_BUILD_ARGS.md: Documentation for build args

Benefits:
✅ Fork maintainers can test m3u-proxy changes in AIO automatically
✅ CI/CD uses correct fork without manual intervention
✅ Fully dynamic - works for any GitHub username
✅ Backward compatible - defaults to upstream
✅ Configuration validation now works correctly

This fixes the issue where:
- No streams would play due to false config mismatch warnings
- m3u-proxy improvements weren't included in AIO builds
- Fork maintainers couldn't test their m3u-proxy changes

--- a/.github/workflows/publish_dev.yml
+++ b/.github/workflows/publish_dev.yml
@@ -31,6 +31,8 @@ jobs:
             GIT_BRANCH=${{ github.ref_name }}
             GIT_COMMIT=${{ github.sha }}
             GIT_TAG=${{ github.ref_type == 'tag' && github.ref_name || '' }}
+            M3U_PROXY_REPO=https://github.com/${{ github.repository_owner }}/m3u-proxy.git
+            M3U_PROXY_BRANCH=dev
           provenance: false
           sbom: false
 
@@ -61,6 +63,8 @@ jobs:
             GIT_BRANCH=${{ github.ref_name }}
             GIT_COMMIT=${{ github.sha }}
             GIT_TAG=${{ github.ref_type == 'tag' && github.ref_name || '' }}
+            M3U_PROXY_REPO=https://github.com/${{ github.repository_owner }}/m3u-proxy.git
+            M3U_PROXY_BRANCH=dev
           provenance: false
           sbom: false
 
