Add HLS-specific headers to NGINX configurations
ENHANCEMENT: Add critical HLS streaming headers for optimal playback and cross-origin support.

Changes:
1. Added Cache-Control headers to prevent stale playlist caching
2. Added CORS headers for cross-origin HLS playback
3. Added Access-Control headers for Range requests (seeking)

Headers Added:
- Cache-Control: no-cache, no-store, must-revalidate
- Pragma: no-cache
- Access-Control-Allow-Origin: *
- Access-Control-Expose-Headers: Content-Length,Content-Range
- Access-Control-Allow-Headers: Range,DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type
- Access-Control-Allow-Methods: GET, HEAD, OPTIONS

Benefits:
- ✅ Prevents stale playlist caching (critical for live streams)
- ✅ Enables cross-origin HLS playback (embedding in different domains)
- ✅ Allows Range requests for seeking/scrubbing
- ✅ Enables bandwidth estimation in players
- ✅ Fixes CORS errors in browser console

Files Changed:
- docker/8.4/nginx/laravel.conf (AIO mode)
- nginx.conf (external mode)

Testing:
- Verify CORS headers in browser dev tools
- Test cross-origin playback
- Verify seeking/scrubbing works correctly

--- a/nginx.conf
+++ b/nginx.conf
@@ -82,28 +82,36 @@ http {
         location ~ ^/m3u-proxy/ {
             # Remove /m3u-proxy prefix when forwarding to proxy
             rewrite ^/m3u-proxy/(.*) /$1 break;
-            
+
             proxy_pass http://m3u-proxy;
             proxy_http_version 1.1;
-            
+
             # Headers for streaming
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header Connection "";
-            
+
+            # HLS-specific headers for optimal streaming and cross-origin support
+            add_header Cache-Control "no-cache, no-store, must-revalidate" always;
+            add_header Pragma "no-cache" always;
+            add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
+            add_header 'Access-Control-Allow-Headers' 'Range,DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, HEAD, OPTIONS' always;
+
             # Timeouts for streaming
             proxy_connect_timeout 300s;
             proxy_send_timeout 300s;
             proxy_read_timeout 300s;
             send_timeout 300s;
-            
+
             # Disable buffering for streaming
             proxy_buffering off;
             proxy_request_buffering off;
             tcp_nodelay on;
-            
+
             # Enable keepalive
             proxy_socket_keepalive on;
         }
