--- a/docker/8.4/nginx/laravel.conf
+++ b/docker/8.4/nginx/laravel.conf
@@ -60,6 +60,14 @@ server {
         proxy_set_header X-Forwarded-Port $server_port;
         proxy_cache_bypass $http_upgrade;
 
+        # HLS-specific headers for optimal streaming and cross-origin support
+        add_header Cache-Control "no-cache, no-store, must-revalidate" always;
+        add_header Pragma "no-cache" always;
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
+        add_header 'Access-Control-Allow-Headers' 'Range,DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, HEAD, OPTIONS' always;
+
         # Timeouts for streaming
         proxy_read_timeout 3600s;
         proxy_connect_timeout 75s;
