Add .gitignore rules to prevent analysis/summary reports from being committed
- Added patterns to ignore all *_ANALYSIS.md, *_SUMMARY.md, *_FIXES.md files
- Removed previously committed analysis files from Git tracking
- These files are for local development discussion only

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,11 @@ config/database
 config/logs
 config/env
 data/
+
+# Analysis and summary reports - never commit these
+*_ANALYSIS.md
+*_SUMMARY.md
+*_FIXES.md
+*ANALYSIS*.md
+*SUMMARY*.md
+*FIXES*.md
