--- a/docker/8.4/nginx/laravel.conf
+++ b/docker/8.4/nginx/laravel.conf
@@ -46,9 +46,9 @@ server {
     # M3U Proxy reverse proxy (embedded or external mode)
     # In embedded mode: proxies to localhost:8085 (Python FastAPI service)
     # In external mode: proxies to external container (e.g., m3u-proxy:38085)
-    # No trailing slash in proxy_pass means the /m3u-proxy prefix is preserved
+    # Trailing slash in proxy_pass removes the /m3u-proxy prefix from the proxied request
     location /m3u-proxy/ {
-        proxy_pass http://${M3U_PROXY_NGINX_TARGET};
+        proxy_pass http://${M3U_PROXY_NGINX_TARGET}/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
