chore: Fix docker args
Make sure defaults are set

--- a/.env.docker.example
+++ b/.env.docker.example
@@ -20,6 +20,10 @@ M3U_PROXY_HOST=localhost
 M3U_PROXY_PORT=38085
 M3U_PROXY_PUBLIC_URL=http://localhost:36400/m3u-proxy
 
+# For embedded proxy
+#M3U_PROXY_REPO=https://github.com/sparkison/m3u-proxy.git
+#M3U_PROXY_BRANCH=dev
+
 PG_PORT=5432
 PG_DATABASE=m3ue
 PG_USER=m3ue
