fix: Preserve X-Forwarded-Proto from upstream reverse proxy
CRITICAL FIX for HTTPS detection when using reverse proxy with SSL

Root Cause:
- Internal NGINX/Caddy was OVERWRITING X-Forwarded-Proto header
- Used $scheme (http) instead of preserving upstream header (https)
- This caused m3u-proxy to generate HTTP URLs on HTTPS sites
- Result: Mixed content blocking, black screen on video player

Changes:
- NGINX: Preserve X-Forwarded-Proto from upstream, fallback to $scheme
- NGINX: Also forward X-Forwarded-Ssl and X-Forwarded-Port headers
- Caddy: Preserve X-Forwarded-Proto from upstream, fallback to {scheme}
- Caddy: Also forward X-Forwarded-Ssl and X-Forwarded-Port headers

This fixes HLS streaming when using:
- NGINX Proxy Manager + SSL
- Caddy + SSL
- Traefik + SSL
- Cloudflare Tunnel
- Any reverse proxy with SSL termination

Tested with: NGINX Proxy Manager on unRAID with domain + SSL

--- a/Caddyfile
+++ b/Caddyfile
@@ -52,17 +52,26 @@
     handle @m3u_proxy {
         # Remove /m3u-proxy prefix when forwarding to proxy
         uri strip_prefix /m3u-proxy
-        
+
         reverse_proxy m3u-proxy:38085 {
             # Headers for streaming
             header_up Host {host}
             header_up X-Real-IP {remote_host}
             header_up X-Forwarded-For {remote_host}
-            header_up X-Forwarded-Proto {scheme}
-            
+
+            # ✅ FIX: Preserve X-Forwarded-Proto from upstream reverse proxy
+            # Caddy automatically preserves incoming headers, but we ensure it's set
+            # If not present from upstream, use current scheme
+            header_up X-Forwarded-Proto {header.X-Forwarded-Proto}
+            header_up >X-Forwarded-Proto {scheme}
+
+            # Also preserve other HTTPS detection headers for universal support
+            header_up X-Forwarded-Ssl {header.X-Forwarded-Ssl}
+            header_up X-Forwarded-Port {header.X-Forwarded-Port}
+
             # Disable buffering for streaming
             flush_interval -1
-            
+
             # Timeouts for streaming
             transport http {
                 read_timeout 300s
