--- a/nginx.conf
+++ b/nginx.conf
@@ -90,7 +90,20 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # ✅ FIX: Preserve X-Forwarded-Proto from upstream reverse proxy (NPM, Caddy, etc.)
+            # Use the header from upstream if present, otherwise fall back to current scheme
+            # This ensures HTTPS detection works when behind multiple proxies
+            set $forwarded_proto $http_x_forwarded_proto;
+            if ($forwarded_proto = "") {
+                set $forwarded_proto $scheme;
+            }
+            proxy_set_header X-Forwarded-Proto $forwarded_proto;
+
+            # Also forward X-Forwarded-Ssl, X-Forwarded-Port for universal HTTPS detection
+            proxy_set_header X-Forwarded-Ssl $http_x_forwarded_ssl;
+            proxy_set_header X-Forwarded-Port $http_x_forwarded_port;
+
             proxy_set_header Connection "";
 
             # HLS-specific headers for optimal streaming and cross-origin support
