--- a/nginx.conf
+++ b/nginx.conf
@@ -94,9 +94,9 @@ http {
             # ✅ FIX: Preserve X-Forwarded-Proto from upstream reverse proxy (NPM, Caddy, etc.)
             # Use the header from upstream if present, otherwise fall back to current scheme
             # This ensures HTTPS detection works when behind multiple proxies
-            set $forwarded_proto $http_x_forwarded_proto;
-            if ($forwarded_proto = "") {
-                set $forwarded_proto $scheme;
+            map $http_x_forwarded_proto $forwarded_proto {
+                default $http_x_forwarded_proto;
+                ""      $scheme;
             }
             proxy_set_header X-Forwarded-Proto $forwarded_proto;
 
