Upgrade to FFmpeg 8.0 from Alpine edge + HTTP/2 support
- Add Alpine edge repository for FFmpeg 8.0 (fixes extension_picky error)
- Update Dockerfile to install ffmpeg@edge instead of ffmpeg 6.1.2
- Add HTTP/2 configuration comments to NGINX configs (disabled by default)
- Preserve all existing default stream profiles unchanged
- No changes to application code or default FFmpeg commands

--- a/docker/8.4/nginx/laravel.conf
+++ b/docker/8.4/nginx/laravel.conf
@@ -1,5 +1,9 @@
 server {
     listen ${APP_PORT};
+    # HTTP/2 support (requires NGINX 1.9.5+)
+    # Note: HTTP/2 over cleartext (h2c) is not widely supported by browsers
+    # For production, use HTTPS with HTTP/2: listen ${APP_PORT} ssl http2;
+    # listen ${APP_PORT} http2;
     server_name _;
 
     root /var/www/html/public;
