--- a/nginx.conf
+++ b/nginx.conf
@@ -59,8 +59,12 @@ http {
 
     server {
         listen 80;
+        # HTTP/2 support (requires NGINX 1.9.5+)
+        # Note: HTTP/2 over cleartext (h2c) is not widely supported by browsers
+        # For production, use HTTPS with HTTP/2: listen 443 ssl http2;
+        # listen 80 http2;
         server_name _;
-        
+
         root /var/www/html/public;
         index index.php index.html;
 
