feat: Add Intel/AMD/NVIDIA hardware acceleration support with detection
- Install Intel QSV/VAAPI drivers in Dockerfile:
  * mesa-dri-gallium, mesa-va-gallium (Mesa drivers)
  * intel-media-driver (VAAPI for Broadwell+)
  * libva-intel-driver (VAAPI for older Intel)
  * libva, libva-utils (VAAPI libraries)
  * linux-firmware-i915 (Intel firmware)
  * pciutils, lshw (hardware detection tools)

- Add comprehensive hardware detection script:
  * Detects GPU model (Intel/AMD/NVIDIA)
  * Checks /dev/dri device nodes and accessibility
  * Verifies user group memberships (video, render)
  * Tests FFmpeg hardware acceleration capabilities
  * Outputs detailed logs with emojis and status indicators
  * Provides recommendations for enabling hardware acceleration

- Integrate hardware detection into startup:
  * Runs automatically on container start (configurable via HARDWARE_DETECTION_ENABLED)
  * Helps users identify if GPU devices are accessible
  * Shows which FFmpeg hwaccel methods are available

- Update docker-compose files with device mapping examples:
  * Add commented Intel/AMD GPU configuration (devices, group_add, LIBVA_DRIVER_NAME)
  * Add commented NVIDIA GPU configuration (runtime, environment)
  * Provide clear instructions for enabling hardware acceleration

This enables users to leverage Intel QuickSync (QSV), AMD VAAPI, or NVIDIA NVENC
for hardware-accelerated video transcoding, significantly improving performance
and reducing CPU usage for live streaming and VOD transcoding.

--- a/docker-compose.proxy.yml
+++ b/docker-compose.proxy.yml
@@ -137,6 +137,24 @@ services:
     #   - "${PROXY_PORT:-38085}:${PROXY_PORT:-38085}"  # Uncomment only if you need direct external access
     networks:
       - m3u-network
+
+    # Hardware Acceleration (Uncomment for Intel/AMD GPU support)
+    # For Intel QuickSync (QSV) or AMD VAAPI hardware acceleration:
+    # devices:
+    #   - /dev/dri:/dev/dri
+    # group_add:
+    #   - video    # GID 44 - required for GPU access
+    #   - render   # GID 18 - required for GPU access
+    # environment:
+    #   - LIBVA_DRIVER_NAME=iHD  # Use 'iHD' for Intel gen8+, 'i965' for gen5-gen9.5
+
+    # Hardware Acceleration (Uncomment for NVIDIA GPU support)
+    # For NVIDIA NVENC/NVDEC hardware acceleration:
+    # runtime: nvidia
+    # environment:
+    #   - NVIDIA_VISIBLE_DEVICES=all
+    #   - NVIDIA_DRIVER_CAPABILITIES=compute,video,utility
+
     depends_on:
       redis:
         condition: service_healthy
