--- a/docker-compose.external-all.yml
+++ b/docker-compose.external-all.yml
@@ -134,8 +134,24 @@ services:
     depends_on:
       redis:
         condition: service_healthy
+
+    # Hardware Acceleration (Uncomment for Intel/AMD GPU support)
+    # For Intel QuickSync (QSV) or AMD VAAPI hardware acceleration:
     # devices:
     #   - /dev/dri:/dev/dri
+    # group_add:
+    #   - video    # GID 44 - required for GPU access
+    #   - render   # GID 18 - required for GPU access
+    # environment:
+    #   - LIBVA_DRIVER_NAME=iHD  # Use 'iHD' for Intel gen8+, 'i965' for gen5-gen9.5
+
+    # Hardware Acceleration (Uncomment for NVIDIA GPU support)
+    # For NVIDIA NVENC/NVDEC hardware acceleration:
+    # runtime: nvidia
+    # environment:
+    #   - NVIDIA_VISIBLE_DEVICES=all
+    #   - NVIDIA_DRIVER_CAPABILITIES=compute,video,utility
+
     healthcheck:
       test: ["CMD", "curl", "-f", "http://127.0.0.1:${M3U_PROXY_PORT:-38085}/health?api_token=${M3U_PROXY_TOKEN:-changeme}"]
       interval: 30s
