--- a/docker/8.4/nginx/xtream.conf
+++ b/docker/8.4/nginx/xtream.conf
@@ -60,18 +60,30 @@ server {
       proxy_set_header X-Real-IP $remote_addr;
     }
 
-    ### STRICT PLAYLIST (.m3u8) ###
-    # /live/USER/UUID/<name>.m3u8 or .m3u
-    location ~ "^/live/[A-Za-z0-9_-]+/[0-9A-Fa-f]{8}-[0-9A-Fa-f]{4}-[0-9A-Fa-f]{4}-[0-9A-Fa-f]{4}-[0-9A-Fa-f]{12}/[A-Za-z0-9_-]+\.(m3u8?|m3u)$" {
+    ### LIVE STREAMS / MOVIES / SERIES - ANY EXTENSION ###
+    # /live/USER/UUID/<filename>.<any_extension>
+    # /movie/USER/UUID/<filename>.<any_extension>
+    # /series/USER/UUID/<filename>.<any_extension>
+    # Supports: .m3u8, .m3u, .ts, .mp4, .mkv, .avi, etc.
+    location ~ "^/(live|movie|series)/[A-Za-z0-9_-]+/[0-9A-Fa-f]{8}-[0-9A-Fa-f]{4}-[0-9A-Fa-f]{4}-[0-9A-Fa-f]{4}-[0-9A-Fa-f]{12}/[A-Za-z0-9_.-]+$" {
       proxy_pass http://127.0.0.1:${APP_PORT};
       proxy_set_header Host $host;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Real-IP $remote_addr;
     }
 
-    ### STRICT TS SEGMENTS ###
-    # /live/admin/UUID/12345.ts
-    location ~ "^/live/[A-Za-z0-9_-]+/[0-9A-Fa-f]{8}-[0-9A-Fa-f]{4}-[0-9A-Fa-f]{4}-[0-9A-Fa-f]{4}-[0-9A-Fa-f]{12}/[0-9]+\.ts$" {
+    ### TIMESHIFT STREAMS ###
+    # /timeshift/USER/UUID/DURATION/DATE/<filename>.<any_extension>
+    location ~ "^/timeshift/[A-Za-z0-9_-]+/[0-9A-Fa-f]{8}-[0-9A-Fa-f]{4}-[0-9A-Fa-f]{4}-[0-9A-Fa-f]{4}-[0-9A-Fa-f]{12}/[^/]+/[^/]+/[A-Za-z0-9_.-]+$" {
+      proxy_pass http://127.0.0.1:${APP_PORT};
+      proxy_set_header Host $host;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    ### SCHEDULES DIRECT IMAGE PROXY ###
+    # /schedules-direct/<epg>/image/<imageHash>
+    location ~ "^/schedules-direct/[A-Za-z0-9_-]+/image/[A-Za-z0-9_-]+$" {
       proxy_pass http://127.0.0.1:${APP_PORT};
       proxy_set_header Host $host;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
